# HyperToric

./: .gitignore  .pre-commit-config.yaml  lint-and-format.sh  pyproject.toml  test-gpu.sh
.github/workflows/: ci.yml
conf/: config.yaml
conf/io/: tracking_1d.yaml
conf/plasticity/: default.yaml
conf/stdp/: all.yaml
conf/training/: slow_step.yaml  static_target.yaml  tracking_1d.yaml
docs/experiments/: motor-proportional-control.md
docs/experiments/perf/: motor-sampling-params.md  neighbor-lookup-vs-inline.md
docs/plans/: main-plan-v1.md  progress.md  wc-01-project-setup-ci.md  wc-02-config-topology.md  wc-03-fields.md  wc-04-neuron-kernel.md  wc-05-propagation.md  wc-06-stdp.md  wc-07-plasticity.md  wc-08-simulator.md  wc-09-io.md  wc-10-task.md  wc-11-integration.md
src/hypertoric/: __init__.py  __main__.py  config.py  fields.py  io.py  simulator.py  task.py  topology.py
src/hypertoric/conf/: config.yaml
src/hypertoric/conf/neuron/: default.yaml
src/hypertoric/conf/stdp/: rotating.yaml
src/hypertoric/conf/torus/: default_3d.yaml  large_4d.yaml  small_2d.yaml
src/hypertoric/conf/training/: static_target.yaml
src/hypertoric/kernels/: __init__.py  plasticity.py  propagate.py  stdp.py
src/hypertoric/kernels/neuron_models/: __init__.py  izhikevich.py
tests/: conftest.py  generate_reference.py  reference_trajectories.npz  test_config.py  test_fields.py  test_integration.py  test_inversion.py  test_io.py  test_neuron.py  test_numerical_reference.py  test_plasticity.py  test_propagate.py  test_simulator.py  test_stdp.py  test_task.py  test_topology.py
