[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypertoric"
version = "0.1.0"
description = "GPU-accelerated numeric simulations using taichi"
requires-python = ">=3.11,<3.14"
dependencies = [
    "taichi>=1.7.4",
    "numpy>=1.26",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
vis = ["matplotlib"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hypertoric"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires GPU backend",
    "slow: long-running tests",
    "integration: end-to-end integration tests",
]
addopts = ["--strict-markers", "-ra"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/"]

[[tool.mypy.overrides]]
module = "taichi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hydra.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "omegaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypertoric.kernels.neuron_models.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["hypertoric"]

[tool.coverage.run]
source = ["hypertoric"]

[tool.coverage.report]
fail_under = 0
show_missing = true
